# Basic-RestFramework

./: .gitignore  Dockerfile  README.md  custom_logger.py  db.sqlite3  docker-compose.yaml  pyproject.toml  requests.rest  requirements.txt
accounts/: admin.py  middleware.py  models.py
accounts/migrations/: 0001_initial.py  0002_alter_user_managers.py
auth/: admin.py  urls.py
authentication/: serializers.py  tests.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_employee_birthdate_employee_salary.py  0003_alter_employee_birthdate.py  0004_delete_employee.py
college/: admin.py  models.py  serializer.py  views.py
college/migrations/: 0001_initial.py
setup/: seed.py  settings.py  urls.py
