[tool.poetry]
name = "basic-restframework"
version = "0.1.0"
description = ""
authors = ["Gustavo Valle"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "^3.5.2"
autopep8 = "^1.7.0"
Django = "^4.1.1"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.0"
pycodestyle = "^2.9.1"
PyJWT = "^2.5.0"
pytz = "^2022.2.1"
sqlparse = "^0.4.3"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
